Resolves: tdf#160509 use BorderWindow client for dialog parent

the BorderWindow has no ultimate SystemWindow parent so dialogs
using this as a parent end up automatically picking a parent
of whatever happens to be in the foreground and not the intended
associated frame

Change-Id: I713e3c40b0cad934b978ba0b1b46a3c6064be24f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171104
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins